**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.23 - SVN
--------------------
  - Added capability to issue SEARCH commands in literal format (so that
    non-ASCII search terms are handled RFC-correctly).
  - Fixed hook name clash: new "smtp_auth" hook added in version 1.4.22
    has been renamed to "smtp_authenticate"
  - Added SASL PLAIN mechanism for IMAP logins; backported from version
    1.5.2.
  - Prevent syslog warning in call_user_func_array() call when no
    arguments given.  Patch from Jean-Philippe Guerard (#3309935).
  - Changed the read_body_menu_top hook from concat_hook_function to
    do_hook_function (plugin authors please note)
  - Always ensure that the Reply-To header is a full email address in
    outgoing messages
  - Fixed issue with Noselect mailboxes being clickable in folder list
  - Made performance improvements in mailbox listing
  - Attachment filename extensions changed from ".msg" to ".eml"
  - Unified address book searches somewhat: file-backed address books now
    search in each field individually; database-backed address books now
    search in fields other than first/last name (nickname, email); LDAP-
    backed address books now search in common name fields as well as by
    email address (cn, sn, givenname, mail)
  - You may now enable LDAP-backed address books to be listed (using
    the "List all" button on the address search screen accessed via
    the "Addresses" button on the compose screen) by adding
    "$ldap_abook_allow_listing = TRUE;" (without quotes) to
    config/config_local.php (previously, this required editing of a
    file).
  - Added ability to control browser rendering mode (quirks versus
    standards) - see the $browser_rendering_mode setting in
    config/config.php or the "4. General Options ==> 19. Browser
    rendering mode" setting in the configuration tool (#3240356).